--- a/flexbox.html
+++ b/flexbox.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="flexbox.css" />
 
-<div class="frame">
+<div class="frame" id="2">
     <header class="row">
         <div class="logo">logo</div>
         <div class="header">header</div>
@@ -9,8 +9,14 @@
         <div class="content">content</div>
         <div class="news">news</div>
     </main>
-    <footer class="row footer">
-        footer
-    </footer>
+    <footer class="row footer">footer</footer>
 
+</div>
+
+
+
+
+<div class="control">
+	<a class="item" href="#1">1</a>
+	<a class="item" href="#2">2</a>
 </div>
