--- a/flexbox2.html
+++ b/flexbox2.html
@@ -8,9 +8,7 @@
     <main class="row">
         <div class="hbox row">
             <div class="content">content</div>
-            <footer class="row footer">
-                footer
-            </footer>
+            <footer class="row footer">footer</footer>
         </div>
         <div class="news">news</div>
     </main>
