Added more examples

--- a/define-lines-show-area.html
+++ b/define-lines-show-area.html
@@ -1,6 +1,6 @@
 <link rel="stylesheet" type="text/css" href="grid.css">
 
-<body class="define-lines define-grid">
+<body class="define-lines show-lines">
 <div class="frame">
 	<div class="logo">logo</div>
 	<header>header</header>
@@ -10,5 +10,7 @@
 	</main>
 	<aside>side</aside>
 	<footer>footer</footer>
+
+	<section class="area area1"></section>
 </div>
 </body>
