--- a/named_grid_lines.html
+++ b/named_grid_lines.html
@@ -11,6 +11,6 @@
 	</main>
 	<aside>side</aside>
 	<footer>footer</footer>
-	<!-- <section class="area2"></section> -->
+	<section class="area2" style="display: none"></section>
 </div>
 </body>
