--- a/flexbox.html
+++ b/flexbox.html
@@ -7,7 +7,7 @@
 </header>
 <main class="row">
     <div class="content">content</div>
-    <div class="news">news</div>
+    <div class="news">side</div>
 </main>
 <footer class="row footer">footer</footer>
 
