--- a/flexbox2.html
+++ b/flexbox2.html
@@ -10,7 +10,7 @@
         <div class="content">content</div>
         <footer class="row footer">footer</footer>
     </div>
-    <div class="news">news</div>
+    <div class="news">side</div>
 </main>
 
 </div>
