--- a/named_grid_areas.html
+++ b/named_grid_areas.html
@@ -11,6 +11,6 @@
 	</main>
 	<aside>side</aside>
 	<footer>footer</footer>
-	<!-- <section class="area3"></section> -->
+	<section class="area3"></section>
 </div>
 </body>
